2단계 - 리팩터링(메뉴) (#211)
* refactor(#step1): 상품 JPA repository 디렉토리 수정

* refactor(#step1): 메뉴 그룹 API Spec 용도 model 추가

* refactor(#step2): 메뉴 API Spec 용도 model 추가

* refactor(#step1): 메뉴 그룹 관련 전술적 설계 리팩토링

* refactor(#step2): 메뉴 관련 전술적 설계 리팩토링

* refactor(#step2): 비속어 관련 client support(공통, common) 패키징 이동

* refactor(#step2): boolean return 메서드명 수정

* fix(#step2): 메뉴 수량 관련 exception 메세지 수정

* fix(#step2): 메뉴명 관련 exception 메세지 수정

* refactor(#step2): 정적 팩토리 메소드 내, 생성자 관련 수정

* refactor(#step2): 메뉴 및 메뉴 그룹 패키징 분리

* fix(#step2): 멀티 도메인 관련 기능 애플리케이션 서비스로 이동

* test(#step2): 메뉴 관련 테스트 코드 추가

* refactor(#step2): 메뉴 상품 수량 관련 VO 제거

* refactor(#step2): 메뉴 내, 상품 별도 추가

* refactor(#step2): 메뉴 생성 관련 리팩토링

* docs(#step2): 상품 및 메뉴 관련 용어사전 수정

* refactor(#step2): 메뉴 내, 유효성 검사 메소드 이름 수정

* refactor(#step2): 메뉴 상품 내 상품 엔티티 수정

* refactor(#step2): 기타 리팩토링