@@ -1,14 +1,18 @@
 package kitchenpos.menus.application;
 
-import kitchenpos.menus.domain.Menu;
-import kitchenpos.menus.domain.MenuGroupRepository;
-import kitchenpos.menus.domain.MenuProduct;
-import kitchenpos.menus.domain.MenuRepository;
+import kitchenpos.menus.dto.MenuChangePriceRequest;
+import kitchenpos.menus.dto.MenuCreateRequest;
+import kitchenpos.menus.dto.MenuDetailResponse;
+import kitchenpos.menus.dto.MenuProductElement;
+import kitchenpos.menus.mapper.MenuMapper;
+import kitchenpos.menus.tobe.domain.menu.*;
+import kitchenpos.menus.tobe.domain.menugroup.MenuGroup;
+import kitchenpos.menus.tobe.domain.menugroup.MenuGroupRepository;
 import kitchenpos.products.infra.FakePurgomalumClient;
-import kitchenpos.products.infra.PurgomalumClient;
 import kitchenpos.products.tobe.domain.InMemoryProductRepository;
 import kitchenpos.products.tobe.domain.Product;
 import kitchenpos.products.tobe.domain.ProductRepository;
+import kitchenpos.support.infra.PurgomalumClient;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -21,7 +25,10 @@ import org.junit.jupiter.params.provider.ValueSource;
 import java.math.BigDecimal;
 import java.util.*;
 
+import static java.util.Objects.isNull;
+import static java.util.stream.Collectors.toUnmodifiableList;
 import static kitchenpos.Fixtures.*;
+import static kitchenpos.menus.tobe.domain.menu.FakeMenu.createFake;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
@@ -32,22 +39,18 @@ class MenuServiceTest {
     private ProductRepository productRepository;
     private PurgomalumClient purgomalumClient;
     private MenuService menuService;
-    private UUID menuGroupId;
+    private MenuGroup menuGroup;
     private Product product;
 
     private static List<Arguments> menuProducts() {
         return Arrays.asList(
                 null,
-                Arguments.of(Collections.emptyList()),
-                Arguments.of(List.of(createMenuProductRequest(INVALID_ID, 2L)))
+                Arguments.of(Collections.emptyList())
         );
     }
 
-    private static MenuProduct createMenuProductRequest(final UUID productId, final long quantity) {
-        final MenuProduct menuProduct = new MenuProduct();
-        menuProduct.setProductId(productId);
-        menuProduct.setQuantity(quantity);
-        return menuProduct;
+    private static MenuProduct createMenuProductRequest(final Product product, final long quantity) {
+        return MenuProduct.create(convertProductToProductInMenu(product), quantity);
     }
 
     @BeforeEach
@@ -57,7 +60,7 @@ class MenuServiceTest {
         productRepository = new InMemoryProductRepository();
         purgomalumClient = new FakePurgomalumClient();
         menuService = new MenuService(menuRepository, menuGroupRepository, productRepository, purgomalumClient);
-        menuGroupId = menuGroupRepository.save(menuGroup()).getId();
+        menuGroup = menuGroupRepository.save(menuGroup());
         product = productRepository.save(product("후라이드", 16_000L));
     }
 
@@ -65,9 +68,15 @@ class MenuServiceTest {
     @Test
     void create() {
         final Menu expected = createMenuRequest(
-                "후라이드+후라이드", 19_000L, menuGroupId, true, createMenuProductRequest(product.getId(), 2L)
+                "후라이드+후라이드", 19_000L, menuGroup, true, createMenuProductRequest(product, 2L)
         );
-        final Menu actual = menuService.create(expected);
+        MenuDetailResponse actual = menuService.create(new MenuCreateRequest(
+                expected.getName(),
+                expected.getPrice(),
+                expected.getMenuGroupId(),
+                expected.isDisplayed(),
+                collectMenuProductElements(expected.getMenuProducts())
+        ));
         assertThat(actual).isNotNull();
         assertAll(
                 () -> assertThat(actual.getId()).isNotNull(),
@@ -79,22 +88,42 @@ class MenuServiceTest {
         );
     }
 
+    private List<MenuProductElement> collectMenuProductElements(List<MenuProduct> menuProducts) {
+        if (isNull(menuProducts)) {
+            return null;
+        }
+
+        return menuProducts
+                .stream()
+                .map(MenuMapper::toMenuProductElement)
+                .collect(toUnmodifiableList());
+    }
+
     @DisplayName("상품이 없으면 등록할 수 없다.")
     @MethodSource("menuProducts")
     @ParameterizedTest
     void create(final List<MenuProduct> menuProducts) {
-        final Menu expected = createMenuRequest("후라이드+후라이드", 19_000L, menuGroupId, true, menuProducts);
-        assertThatThrownBy(() -> menuService.create(expected))
+        assertThatThrownBy(() -> createMenuRequest("후라이드+후라이드", 19_000L, menuGroup, true, menuProducts))
+                .isInstanceOf(IllegalArgumentException.class);
+    }
+
+    @DisplayName("존재하지 않는 상품이 있으면 등록할 수 없다.")
+    @Test
+    void createNotExistedMenuProducts() {
+        final List<MenuProduct> notExistedProduct = List.of(createMenuProductRequest(product(), 2L));
+        final Menu expected = createMenuRequest("후라이드+후라이드", 19_000L, menuGroup, true, notExistedProduct);
+        assertThatThrownBy(() -> menuService.create(new MenuCreateRequest(expected.getName(),
+                expected.getPrice(),
+                menuGroup.getId(),
+                expected.isDisplayed(),
+                collectMenuProductElements(expected.getMenuProducts()))))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("메뉴에 속한 상품의 수량은 0개 이상이어야 한다.")
     @Test
     void createNegativeQuantity() {
-        final Menu expected = createMenuRequest(
-                "후라이드+후라이드", 19_000L, menuGroupId, true, createMenuProductRequest(product.getId(), -1L)
-        );
-        assertThatThrownBy(() -> menuService.create(expected))
+        assertThatThrownBy(() -> createMenuProductRequest(product, -1L))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -103,20 +132,22 @@ class MenuServiceTest {
     @NullSource
     @ParameterizedTest
     void create(final BigDecimal price) {
-        final Menu expected = createMenuRequest(
-                "후라이드+후라이드", price, menuGroupId, true, createMenuProductRequest(product.getId(), 2L)
-        );
-        assertThatThrownBy(() -> menuService.create(expected))
+        assertThatThrownBy(() -> createMenuRequest(
+                "후라이드+후라이드", price, menuGroup, true, createMenuProductRequest(product, 2L)))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("메뉴에 속한 상품 금액의 합은 메뉴의 가격보다 크거나 같아야 한다.")
     @Test
     void createExpensiveMenu() {
-        final Menu expected = createMenuRequest(
-                "후라이드+후라이드", 33_000L, menuGroupId, true, createMenuProductRequest(product.getId(), 2L)
+        final MenuCreateRequest menuCreateRequest = new MenuCreateRequest(
+                "후라이드+후라이드",
+                BigDecimal.valueOf(33_000L),
+                menuGroup.getId(),
+                true,
+                List.of(new MenuProductElement(product.getId(), 2L))
         );
-        assertThatThrownBy(() -> menuService.create(expected))
+        assertThatThrownBy(() -> menuService.create(menuCreateRequest))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
@@ -125,9 +156,13 @@ class MenuServiceTest {
     @ParameterizedTest
     void create(final UUID menuGroupId) {
         final Menu expected = createMenuRequest(
-                "후라이드+후라이드", 19_000L, menuGroupId, true, createMenuProductRequest(product.getId(), 2L)
+                "후라이드+후라이드", 19_000L, menuGroup, true, createMenuProductRequest(product, 2L)
         );
-        assertThatThrownBy(() -> menuService.create(expected))
+        assertThatThrownBy(() -> menuService.create(new MenuCreateRequest(expected.getName(),
+                expected.getPrice(),
+                menuGroupId,
+                expected.isDisplayed(),
+                collectMenuProductElements(expected.getMenuProducts()))))
                 .isInstanceOf(NoSuchElementException.class);
     }
 
@@ -136,54 +171,59 @@ class MenuServiceTest {
     @NullSource
     @ParameterizedTest
     void create(final String name) {
-        final Menu expected = createMenuRequest(
-                name, 19_000L, menuGroupId, true, createMenuProductRequest(product.getId(), 2L)
-        );
-        assertThatThrownBy(() -> menuService.create(expected))
-                .isInstanceOf(IllegalArgumentException.class);
+        assertThatThrownBy(() -> createMenuRequest(
+                name, 19_000L, menuGroup, true, createMenuProductRequest(product, 2L)
+        )).isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("메뉴의 가격을 변경할 수 있다.")
     @Test
     void changePrice() {
-        final UUID menuId = menuRepository.save(menu(19_000L, menuProduct(product, 2L))).getId();
-        final Menu expected = changePriceRequest(16_000L);
-        final Menu actual = menuService.changePrice(menuId, expected);
-        assertThat(actual.getPrice()).isEqualTo(expected.getPrice());
+        final UUID menuId = menuRepository.save(menu(19_000L, menuProduct(convertProductToProductInMenu(product), 2L))).getId();
+        final BigDecimal expected = BigDecimal.valueOf(16_000L);
+        final MenuDetailResponse actual = menuService.changePrice(menuId, new MenuChangePriceRequest(expected));
+        assertThat(actual.getPrice()).isEqualTo(expected);
     }
 
     @DisplayName("메뉴의 가격이 올바르지 않으면 변경할 수 없다.")
     @ValueSource(strings = "-1000")
     @NullSource
     @ParameterizedTest
-    void changePrice(final BigDecimal price) {
-        final UUID menuId = menuRepository.save(menu(19_000L, menuProduct(product, 2L))).getId();
-        final Menu expected = changePriceRequest(price);
-        assertThatThrownBy(() -> menuService.changePrice(menuId, expected))
+    void changePrice(final BigDecimal expectedPrice) {
+        final UUID menuId = menuRepository.save(menu(19_000L, menuProduct(convertProductToProductInMenu(product), 2L))).getId();
+
+        assertThatThrownBy(() -> menuService.changePrice(menuId, new MenuChangePriceRequest(expectedPrice)))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("메뉴에 속한 상품 금액의 합은 메뉴의 가격보다 크거나 같아야 한다.")
     @Test
     void changePriceToExpensive() {
-        final UUID menuId = menuRepository.save(menu(19_000L, menuProduct(product, 2L))).getId();
-        final Menu expected = changePriceRequest(33_000L);
-        assertThatThrownBy(() -> menuService.changePrice(menuId, expected))
+        final UUID menuId = menuRepository.save(menu(19_000L, menuProduct(convertProductToProductInMenu(product), 2L))).getId();
+        final BigDecimal expected = BigDecimal.valueOf(33_000L);
+        assertThatThrownBy(() -> menuService.changePrice(menuId, new MenuChangePriceRequest(expected)))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @DisplayName("메뉴를 노출할 수 있다.")
     @Test
     void display() {
-        final UUID menuId = menuRepository.save(menu(19_000L, false, menuProduct(product, 2L))).getId();
-        final Menu actual = menuService.display(menuId);
+        final UUID menuId = menuRepository.save(menu(19_000L, false, menuProduct(convertProductToProductInMenu(product), 2L))).getId();
+        final MenuDetailResponse actual = menuService.display(menuId);
         assertThat(actual.isDisplayed()).isTrue();
     }
 
     @DisplayName("메뉴의 가격이 메뉴에 속한 상품 금액의 합보다 높을 경우 메뉴를 노출할 수 없다.")
     @Test
     void displayExpensiveMenu() {
-        final UUID menuId = menuRepository.save(menu(33_000L, false, menuProduct(product, 2L))).getId();
+        final UUID menuId = menuRepository.save(createFake(
+                "치킨 메뉴",
+                purgomalumClient,
+                33_000L,
+                menuGroup,
+                false,
+                List.of(menuProduct(convertProductToProductInMenu(product), 2L))
+        )).getId();
         assertThatThrownBy(() -> menuService.display(menuId))
                 .isInstanceOf(IllegalStateException.class);
     }
@@ -191,72 +231,63 @@ class MenuServiceTest {
     @DisplayName("메뉴를 숨길 수 있다.")
     @Test
     void hide() {
-        final UUID menuId = menuRepository.save(menu(19_000L, true, menuProduct(product, 2L))).getId();
-        final Menu actual = menuService.hide(menuId);
+        final UUID menuId = menuRepository.save(menu(19_000L, true, menuProduct(convertProductToProductInMenu(product), 2L))).getId();
+        final MenuDetailResponse actual = menuService.hide(menuId);
         assertThat(actual.isDisplayed()).isFalse();
     }
 
     @DisplayName("메뉴의 목록을 조회할 수 있다.")
     @Test
     void findAll() {
-        menuRepository.save(menu(19_000L, true, menuProduct(product, 2L)));
-        final List<Menu> actual = menuService.findAll();
+        menuRepository.save(menu(19_000L, true, menuProduct(convertProductToProductInMenu(product), 2L)));
+        final List<MenuDetailResponse> actual = menuService.findAll();
         assertThat(actual).hasSize(1);
     }
 
     private Menu createMenuRequest(
             final String name,
             final long price,
-            final UUID menuGroupId,
+            final MenuGroup menuGroup,
             final boolean displayed,
             final MenuProduct... menuProducts
     ) {
-        return createMenuRequest(name, BigDecimal.valueOf(price), menuGroupId, displayed, menuProducts);
+        return createMenuRequest(name, BigDecimal.valueOf(price), menuGroup, displayed, menuProducts);
     }
 
     private Menu createMenuRequest(
             final String name,
             final BigDecimal price,
-            final UUID menuGroupId,
+            final MenuGroup menuGroup,
             final boolean displayed,
             final MenuProduct... menuProducts
     ) {
-        return createMenuRequest(name, price, menuGroupId, displayed, Arrays.asList(menuProducts));
+        return createMenuRequest(name, price, menuGroup, displayed, Arrays.asList(menuProducts));
     }
 
     private Menu createMenuRequest(
             final String name,
             final long price,
-            final UUID menuGroupId,
+            final MenuGroup menuGroup,
             final boolean displayed,
             final List<MenuProduct> menuProducts
     ) {
-        return createMenuRequest(name, BigDecimal.valueOf(price), menuGroupId, displayed, menuProducts);
+        return createMenuRequest(name, BigDecimal.valueOf(price), menuGroup, displayed, menuProducts);
     }
 
     private Menu createMenuRequest(
             final String name,
             final BigDecimal price,
-            final UUID menuGroupId,
+            final MenuGroup menuGroup,
             final boolean displayed,
             final List<MenuProduct> menuProducts
     ) {
-        final Menu menu = new Menu();
-        menu.setName(name);
-        menu.setPrice(price);
-        menu.setMenuGroupId(menuGroupId);
-        menu.setDisplayed(displayed);
-        menu.setMenuProducts(menuProducts);
-        return menu;
+        return Menu.create(
+                MenuName.create(name, purgomalumClient),
+                MenuPrice.create(price),
+                menuGroup,
+                MenuDisplay.create(displayed),
+                menuProducts
+        );
     }
 
-    private Menu changePriceRequest(final long price) {
-        return changePriceRequest(BigDecimal.valueOf(price));
-    }
-
-    private Menu changePriceRequest(final BigDecimal price) {
-        final Menu menu = new Menu();
-        menu.setPrice(price);
-        return menu;
-    }
 }
